deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sites-api
  namespace: camping
spec:
  selector:
    matchLabels:
      app: sites-api
  template:
    metadata:
      labels:
        app: sites-api
    spec:
      containers:
      - name: sites-api
        image: jeffrygonzalez/camping-sites:v0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
