deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sites-api-service
spec:
  selector:
    app: sites-api
  ports:
  - port: 80
    targetPort: 80
